--- a/GT/GT/Info.plist
+++ b/GT/GT/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Geometria-Bold.ttf</string>
+		<string>Geometria.ttf</string>
 		<string>Geometria-ExtraBold.ttf</string>
 		<string>Geometria-Light.ttf</string>
 		<string>Geometria-LightItalic.ttf</string>
